// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package sdb;

option cc_generic_services = true;
option go_package="./sdb";

import  "kvpair.proto";

// The greeting service definition.
// Sends a greeting
service Optimizer {
  rpc Optimize(OptimizeRequest) returns (OptimizeReply) {}
}

message PBDirectDispatchInfo {
  bool is_direct_dispatch = 1;
  repeated int32 segments = 2;
}

message PBPlanSlice {
  int32 slice_index = 1;
  int32 parent_index = 2;
  int32 gang_type = 3;
  int32 num_segments = 4;
  int32 segindex = 5;
  PBDirectDispatchInfo direct_dispatch_info = 6;
}
// The request message containing the user's name.
message OptimizeRequest {
  string name = 1;
  string sql = 2;
  uint64 sid = 3;
  uint64 uid = 4;
  uint64 dbid = 5;
  uint64 num_segments = 6;
  uint64 commandid = 7;

  LakeSpace db_space = 8;

  repeated RelFiles catalog_list = 9;
  //repeated LakeRelVersion versions = 21;
}

// The response message containing the greetings
message OptimizeReply {
  int32 rescode = 1;
  ErrorResponse message = 2;
  //int32 code = 1;
  //string sql_err_code = 1;
  //string message = 2;
  bytes planstmt_str = 3;
  bytes plan_dxl_str = 4; // TODO maybe problem FIXME_SDB
  bytes plan_params_str = 5;
  repeated PBPlanSlice slices = 6;
  repeated uint64 read_rels = 7;
  repeated uint64 insert_rels = 8;
  repeated uint64 update_rels = 9;
  repeated uint64 delete_rels = 10;
}
