syntax = "proto3";

package sdb;

option cc_generic_services = false;
option go_package="./sdb";

import  "kvpair.proto";
import  "task.proto";
import  "worker_service.proto";
import  "schedule_service.proto";
import  "optimizer_service.proto";

enum QueryStates {
  QueryNull = 0;
  QueryInit = 1;
  QueryOptimizer = 2;
  QueryExecStart = 3;
  QueryPartitionSuccess = 4;
  QueryCancel = 10;
  QuerySuccess = 11;
  QueryError = 12;
}

message QueryRequestInfo {
  ExecQueryRequest query_request = 1;
  int64 create_timestamp = 2;
}

message QueryOptimizerResult {
  OptimizeReply optimizer_result = 1;
  int64 start_timestamp = 2;
  int64 finish_timestamp = 3;
}

message QueryWorkerInfo {
  PrepareTaskRequest prepare_task_info = 1;
}

message SliceTask {
  TaskIdentify task_identify = 1;
  int64 start_timestamp = 2;
  string worker = 3;
  uint64 worker_id = 4;
}

message TaskResult {
  TaskIdentify task_identify = 1;
  int64 finish_timestamp = 2;
  uint64 sessionid = 4;
  uint64 uid = 5;
  uint64 dbid = 6;
  uint64 worker_id = 7;
  WorkerResultData result = 8;
}

message QueryResult {
  uint32 state = 1;
  ErrorResponse message = 2;
  //string message = 2;
  //string detail = 3;
  uint32 root_workers = 4;
  // string sql_err_code = 5;

  // uint32 cmd_type = 5;
  // uint64 process_rows = 6;

  repeated WorkerResultData result = 7;
  int64 finish_timestamp = 8;
}

